# Multi-role-app

./: .dockerignore  .env  .gitignore  Dockerfile  HR_DASHBOARD_REDESIGN.md  Instructions.md  PHASE2_IMPLEMENTATION.md  README.md  cloud_credentials.json  main.py  pyproject.toml  remaining.md  requirements.txt  test_companies.py
.cursor/rules/: General_rules.md
.github/workflows/: google-cloudrun-docker.yml
Database/: database.py
auth/: Pydantic_model.py  dependencies.py  hr_router.py  router.py  utils.py
core/: AI_Service.py  VideoUploader.py  config.py  scheduler.py  security.py
hr_Dashboard/: router.py
routers/: ai_router.py
